# Code-Monkeys-DevJam

./: .env.example  .gitignore  README.md  example_usage.py  pyproject.toml  requirements.txt  test_structure.py
ai_web_agent/: __init__.py  agent.py  cli.py  gemini_analyzer.py  models.py  web_engine.py
tests/: conftest.py  test_models.py
