[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-web-agent"
version = "1.0.0"
description = "Enhanced Autonomous AI Web Agent"
authors = [{name = "Code Monkeys", email = "dev@example.com"}]
license = {text = "MIT"}
dependencies = [
    "playwright>=1.40.0",
    "google-generativeai>=0.8.0",
    "beautifulsoup4>=4.12.0",
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
    "colorama>=0.4.6",
]

[project.scripts]
ai-web-agent = "ai_web_agent.cli:main"